# telegram_bot_first_project

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
models/: __init__.py
